display footer on mobile view, fix footer elements layout

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,11 +6,23 @@
 .content {
   min-height: calc(100vh - 121px);
   flex-grow: 1;
-}
-@media(max-width: 750px) {
-  app-footer {
-    display: none;
+
+  @media(max-width: 900px) {
+    min-height: calc(100vh - 113px);
+  }
+
+  @media(max-width: 750px) {
+    min-height: calc(100vh - 154px);
+  }
+
+  @media(max-width: 600px) {
+    min-height: calc(100vh - 106px);
   }
 }
+// @media(max-width: 750px) {
+//   app-footer {
+//     display: none;
+//   }
+// }
 
 
